[package]
name = "napalm"
version = "0.1.0"
edition = "2021"

[dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSArray"] }
objc2-app-kit = { version = "0.2", features = ["NSWorkspace", "NSRunningApplication"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
